# scout_mini

controller/: CMakeLists.txt  package.xml
controller/msg/: RefPoses.msg
controller/src/: mpc.py
planning/: CMakeLists.txt  package.xml
planning/src/: trajectory.py
